--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <script src='./lib/fhir-client.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
